syntax = "proto3";

package certcounter.v1;
option go_package = ".;v1";

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

//
// TestAPI
//

message TestAPIServiceEchoRequestResponse {
  string message = 1 [(validate.rules).string.min_len = 1];
}

message TestAPIServiceEchoErrorRequest {
  uint32 code = 1;
  string message = 2 [(validate.rules).string.min_len = 1];
}

service TestAPIService {
  // Echo は受け取った message を返却します
  //
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Echo(TestAPIServiceEchoRequestResponse)
      returns (TestAPIServiceEchoRequestResponse) {
    option (google.api.http) = {
      post: "/api/v1/testapi/echo"
      body: "*"
    };
  }

  // EchoError は意図的にエラーを発生させます
  rpc EchoError(TestAPIServiceEchoErrorRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/testapi/echo_error"
      body: "*"
    };
  }
}
